fix spinner display bug in css, and listen for first signal from iframe to ensure that we don't overlap the spinner on frame content

--- a/gl-simple.css
+++ b/gl-simple.css
@@ -556,7 +556,7 @@
           }
         }
       }
-      &:is(:not(.gl-closing),[data-loaded]) .gl-spinner {
+      &:is(:not([open]),[data-loaded]) .gl-spinner {
         display: none;
       }
     }
